--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^1.2.1
   firebase_core: ^4.3.0
   firebase_auth: ^6.1.3
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
